fix image alignment

--- a/themes/cactus/static/css/style.css
+++ b/themes/cactus/static/css/style.css
@@ -353,6 +353,7 @@ thead th,th {
 
 img {
 	display:block;
+	margin: auto;
 	max-width: 600px;
 	max-width: 100%;
 	border-radius: 3px;
